tests/analyzer/fail/struct-duplicate-field.api
// expected: 1001

type bad = struct {};